--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,4 @@
-<div class="main post-main">
+<div class="post-new-main">
   <div class="post-new-container">
     <p class="post-new-heading">投稿する</p>
     <div class="form">
