--- a/app/assets/stylesheets/likes_ranking.scss
+++ b/app/assets/stylesheets/likes_ranking.scss
@@ -1,6 +1,31 @@
-.user_new_card{
-    height: 370px;
-    margin-bottom: auto;
-    width: 400px;
-    margin-left: 120px;
-  }
+.user_new_card {
+  color: white;
+  margin-bottom: auto;
+  width: 400px;
+  margin-top: 22px;
+  margin-left: 120px;
+  background-color: rgba(250, 138, 0, 0.5) !important;
+  border-radius: 2rem;
+  padding: 0.75rem 1.25rem;
+}
+
+.rank-image {
+  width: 25px;
+  height: 25px;
+}
+
+.likes_count {
+  font-weight: bold;
+  margin-left: 200px
+}
+
+.likes_heart {
+  margin-left: 150px;
+}
+
+.card_content {
+  display: flex;
+  margin-top: -10px;
+  width: 250px;
+  font-size: 20px;
+}
