--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -22,6 +22,14 @@ width: 400px;
 background-color: rgba(0,0,0,0.5) !important;
 }
 
+.new_card {
+  height: 370px;
+  margin-top: auto;
+  margin-bottom: auto;
+  width: 400px;
+  background-color: rgba(0,0,0,0.5) !important;
+}
+
 .social_icon span{
 font-size: 60px;
 margin-left: 10px;
