--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,17 +1,27 @@
-.posts-index-item {
+  .post-index-main {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: cover;
+    padding-top: 3rem;
+    padding-bottom: 275px;
+    background: linear-gradient(rgba(238, 238, 238, 0.896) 0%, rgba(238, 238, 238, 0.896));
+    display: flex;
+  }
+
+  .post-index-container {
+    max-width: 800px;
+    margin: 20px 380px;
+    padding-right: 15px;
+    min-height: 50vh;
+  }
+  
+  .posts-index-item {
     padding: 20px 30px;
     background-color: white;
     overflow: hidden;
     box-shadow: 0 2px 6px #c1ced7;
-    margin-left: - 300px;
-  }
-  
-  .post-left img {
-    width: 50px;
-    height: 50px;
-    border-radius: 40%;
-    box-shadow: 0 2px 6px #c1ced7;
-    object-fit: cover;
+    margin-left: - 370px;
   }
 
   .post-main {
@@ -20,21 +30,21 @@
     background-attachment: scroll;
     background-size: cover;
     padding-top: 3rem;
-    padding-bottom: calc(23rem - 0rem);
     background: linear-gradient(to bottom, rgba(238, 238, 238, 0.896) 0%, rgba(238, 238, 238, 0.896));
     display: flex;
   }
 
   .post-container {
     max-width: 600px;
-    margin: 60px auto;
+    margin: 20px 420px;
     padding-left: 15px;
     padding-right: 15px;
-    min-height: 74vh;
+    min-height: 50vh;
   }
 
   .post-left {
     float: left;
+    display: flex;
     width: 90%;
     padding-left: 25px;
     text-align: left;
@@ -48,21 +58,13 @@
   .post-user-right {
     float: right;
   }
-
-  .post-user-avatar img {
-    display: flex;
-    float: left;
-    margin-right: 3px;
-    margin-left: -35px;
-    width: 50px;
-  }
   
   .post-user-name {
     font-weight: 600;
     color: rgb(66, 55, 55);
     font-size: 18px;
     margin-top: 10px;
-    margin-left: 20px;
+    margin-left: 10px;
   }
 
   .post-user-right {
@@ -128,8 +130,8 @@
   }
   
   .paginate {
-    background-color: #fd6339;
     color:rgb(66, 55, 55);
+    margin-right: 50px;
   }
 
   /* posts/show ================================ */
@@ -151,6 +153,7 @@
   }
   
   .posts-show-item {
+    margin-left: 80px;
     padding: 30px;
     background-color: white;
     box-shadow: 0 2px 6px #c1ced7;
@@ -163,25 +166,10 @@
     margin-left: 5px;
     margin-bottom: 10px;
   }
-  
-  .posts-show-item img {
-    width: 50px;
-    height: 50px;
-    border-radius: 40%;
-    box-shadow: 0 2px 6px #c1ced7;
-    vertical-align: middle;
-    object-fit: cover;
-  }
-  
-  .posts-show-item .post-user-name a {
-    vertical-align: middle;
-    font-size: 24px;
-    margin-left: 15px;
-  }
-  
+    
   .posts-show-item p {
-    font-size: 24px;
-    margin: 20px 0;
+    font-size: 20px;
+    margin-top: 40px;
   }
   
   .post-time {
@@ -211,8 +199,25 @@
     text-decoration: underline;
     font-size: 14px;
   }
+
+  .liked_user {
+    font-size: 20px;
+    margin-top: -20px;
+    line-height: 60px;
+  }
   
   /* posts/new ================================ */
+
+  .post-new-main {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: cover;
+    padding-top: 3rem;
+    padding-bottom: 360px;
+    background: linear-gradient(rgba(238, 238, 238, 0.896) 0%, rgba(238, 238, 238, 0.896));
+    display: flex;
+  }
 
   .post-new-container {
     max-width: 600px;
@@ -306,4 +311,20 @@
     float: right;
     margin-top: 10px;
     margin-right: 7px;
+  }
+
+  .post-edit-main {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: cover;
+    padding-top: 3rem;
+    padding-bottom: 405px;
+    background: linear-gradient(rgba(238, 238, 238, 0.896) 0%, rgba(238, 238, 238, 0.896));
+    display: flex;
+  }
+
+  .comment-image {
+    width: 30px;
+    height: 30px;
   }
