--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="post-main">
+<div class="post-edit-main">
   <div class="post-edit-container">
       <h1 class="post-new-heading">編集する</h1>
       <%= form_tag(post_path(@post), method: :put ) do %>
