--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,8 @@
-<div class="post-main posts-index">
-  <div class="post-container">
+<div class="post-index-main">
+  <div class="post-index-container">
     <div class="posts-show-item">
       <div class="post-show-avatar">
-        <%= image_tag @post.user.avatar.url, class: 'user-image' %>
+        <%= image_tag @post.user.avatar.url, class: 'post-show-image' %>
       </div>
       <div class="post-show-name">
         <%= link_to(@user.name, "/users/#{@user.id}", style: "color: black;") %>
@@ -33,16 +33,17 @@
       </div>
       <p>いいねしたユーザー</p>
       <% @post.liked_users.each do |user| %>
-        <%= user.name %>
-      <% end %>
-      <h4>コメント一覧</h4>
-      <% @comments.each do |c| %>
-        <div>
-          <a href="/users/<%= @post.user.id %>"><%= c.user.name %></a>
-          <%= c.comment %>
-          <%= c.created_at %>
-          <hr>
+        <div class="liked_user">
+          <%= user.name %>
         </div>
+      <% end %>
+      <h5>コメント一覧</h5>
+      <% @comments.each do |c| %>
+          <%= image_tag c.user.avatar.url, class: 'comment-image' %>
+          <%= link_to(c.user.name, "/users/#{@user.id}", style: "color: black;") %>
+          <%= c.comment %>
+          <%= c.created_at.to_s(:datetime_jp) %>
+          <hr>
       <% end %>
       <%= form_with model: @comment, url: comments_path do |f| %>
         <%= hidden_field_tag 'comment[post_id]', @post.id %>
