--- a/app/assets/stylesheets/likes_ranking.scss
+++ b/app/assets/stylesheets/likes_ranking.scss
@@ -1,12 +1,12 @@
 .user_new_card {
-  color: white;
+  color: black;
   margin-bottom: auto;
   width: 400px;
   margin-top: 22px;
   margin-left: 120px;
-  background-color: rgba(250, 138, 0, 0.5) !important;
-  border-radius: 2rem;
+  background-color: white;
   padding: 0.75rem 1.25rem;
+  box-shadow: 0 2px 6px #c1ced7;
 }
 
 .rank-image {
