--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -20,7 +20,7 @@
     padding: 20px 30px;
     background-color: white;
     overflow: hidden;
-    box-shadow: 0 2px 6px #c1ced7;
+    box-shadow: 0 2px 6px #989898;
     margin-left: - 370px;
   }
 
