--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,19 @@
 <div class="post-main">
   <div class="user_new_card" style="width: 20rem;">
     <h4>いいねランキング</h4>
+    <hr>
     <% @all_ranks.each.with_index(1) do |post, i| %>
-      <%= i %>位
+      <% if i == 1 %>
+        <img src="gold_crown.svg" width="32" height="32">
+      <% elsif i == 2 %>
+        <img src="silver_crown.svg" width="32" height="32">
+      <% elsif i == 3 %>
+        <img src="copper_crown.svg" width="32" height="32">
+      <% else %>
+       <%= i %> 位
+      <% end %>
       <%= image_tag post.user.avatar.url, class: 'rank-image', size: '500x240' %>
-      <%= link_to(post.user.name, "/users/#{post.user.id}", style: "color: white;") %>
+      <%= link_to(post.user.name, "/users/#{post.user.id}", style: "color: black;") %>
       <div class="card-body">
         <h6 class="card_content">
           <%= post.content %>
@@ -12,8 +21,11 @@
           <%= post.likes.count %>
         </h6>
       </div>
+      <% if i != @all_ranks.length %>
+        <hr>
+      <% end %>
     <% end %>
-  </div>    
+  </div>
   <div class="post-container">
     <% @posts.each do |post| %>
       <div class="posts-index-item">
@@ -50,5 +62,33 @@
     <div class="paginate">
       <%= paginate @posts %>
     </div>
+  </div>
+  <header>
+    <h1>Voiceニュース</h1>
+    <p>Powered by <a href="https://newsapi.org">News API</a></p>
+  </header>
+  <hr>
+  <div class="articles">
+    <% @articles["articles"].each do |article| %>
+      <div class="article">
+        <div class="title">
+          <%= link_to article["title"], article["url"] %>
+        </div>
+        <div class="wrapper">
+          <div class="date">
+            <%= article["publishedAt"] %>
+          </div>
+          <div class="source">
+            <%= article["source"]["name"]%>
+          </div>
+          <div class="image">
+            <%= image_tag article["urlToImage"],:size =>'240x160' %>
+          </div>
+          <div class="content">
+            <%= article["description"] %>
+          </div >
+        </div>
+      </div>
+    <% end %>
   </div>
 </div>
