--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -72,6 +72,11 @@
     height: 50px;
   }
 
+  .user-header-image {
+    width: 35px;
+    height: 35px;
+  }
+
   .post-index-image {
     width: 50px;
     height: 50px;
