フッター空白修正

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<div class="post-main">
+<div class="post-index-main">
   <div class="user_new_card" style="width: 20rem;">
     <h4>いいねランキング</h4>
     <hr>
@@ -25,7 +25,8 @@
         <hr>
       <% end %>
     <% end %>
-  </div>  <div class="post-container">
+  </div>  
+  <div class="post-container">
     <% @posts.each do |post| %>
       <div class="posts-index-item">
         <div class="post-left">
