--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<div class="post-index-main">
+<div class="post-show-main">
   <div class="post-index-container">
     <div class="posts-show-item">
       <div class="post-show-avatar">
