--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -9,6 +9,17 @@
     display: flex;
   }
 
+  .post-show-main {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: cover;
+    padding-top: 3rem;
+    padding-bottom: 335px;
+    background: linear-gradient(rgba(238, 238, 238, 0.896) 0%, rgba(238, 238, 238, 0.896));
+    display: flex;
+  }
+
   .post-index-container {
     max-width: 800px;
     min-height: 50vh;
@@ -156,7 +167,7 @@
     padding: 30px;
     background-color: white;
     box-shadow: 0 2px 6px #c1ced7;
-    width: 600px;
+    width: 650px;
     overflow: hidden;
     margin-left: auto;
     margin-right: auto;
