--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -54,7 +54,7 @@
           <%= post.liked_users.count %>
         </div>
         <div class="post-user-right">
-          <%= post.user.created_at.to_s(:datetime_jp) %>
+          <%= post.created_at.to_s(:datetime_jp) %>
         </div>
       </div>
     <% end %>
