--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,8 @@
 <div class="post-index-main">
-  <div class="user_new_card" style="width: 20rem;">
-    <h4>いいねランキング</h4>
+  <div class="user_new_card" style="width: 22rem;">
+    <div class="user_new_cardname">
+      <h4><span>いいねランキング</span></h4>
+    </div>
     <hr>
     <% @all_ranks.each.with_index(1) do |post, i| %>
       <% if i == 1 %>
