--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,31 +1,42 @@
-<div class="post-main posts-index">
-  <div class="post-container">
-    <div class="user-show-item">
-      <%= image_tag @user.avatar.url, class: 'user-image' %>
-      <h2><%= @user.name %></h2>
-      <p><%= @user.self_introduction %></p>
-      <% if current_user.id %>
-        <%= link_to "編集", "/users/#{@user.id}/edit", style: "color: black;" %>
-      <% end %>
+<div class="user-show-main">
+  <div class="user-show-container">
+    <div class="profile-card">
+      <div class="profile-card__inner">
+      <div class="profile-thumb">
+        <%= image_tag @user.avatar.url, class: 'profile-thumb' %>
+      </div>
+      <div class="profile-content">
+        <span class="profile-name"><%= @user.name %></span>
+        <span class="profile-intro"><%= @user.self_introduction %></span>
+      </div>
+      <div class="profile-edit">
+        <% if current_user.id %>
+          <%= link_to "編集", "/users/#{@user.id}/edit", style: "color: #8899a6;" %>
+        <% end %>
+      </div>
     </div>
-    <!--<ul class="user-tabs">
-      <li class="active"><%= link_to("投稿", "/users/#{@user.id}") %></li>
-    </ul>-->
+    <div class="user-show-liked">
+      <p>投稿リスト</p>
+    </div>
     <% @user.posts.each do |post| %>
-      <div class="user-index-item">
+      <div class="user-show-item">
         <div class="post-right">
           <%= link_to(post.content, "/posts/#{post.id}", style: "color: black;") %>
           <br>
-          <%= post.user.created_at %>
+          <div class="user-show-time">  
+            <%= post.created_at.to_s(:datetime_jp) %>
+          </div>
         </div>
       </div>
     <% end %>
+    <div class="user-show-liked">
+      <p>いいねリスト</p>
+    </div>
     <% @user.liked_posts.each do |post| %>
       <div class="user-index-item">
         <div class="post-right">
-          <p>いいねリスト</p>
-          <%= post.user.name %>
-          <%= post.content %>
+          <%= link_to(post.user.name, "/users/#{post.user.id}", style: "color: black;") %>
+          <%= link_to(post.content, "/posts/#{post.id}", style: "color: black;") %>
         </div>
       </div>
     <% end %>
