--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -156,7 +156,8 @@
   
   .paginate {
     color:rgb(66, 55, 55);
-    margin-right: 50px;
+    margin-left: -150px;
+    float: left;
   }
 
   /* posts/show ================================ */
