--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
               <% else %>
                 <%= image_tag "/assets/default.png", class: 'user-header-image' %>
               <% end %>
-              <%= link_to("新規投稿", new_post_path, class: "nav-buttom2") %>
+              <%= link_to("新規投稿", new_post_path, class: "new-buttom") %>
               <%= link_to("投稿一覧", posts_path, class: "nav-item nav-link") %>
               <%= link_to 'ログアウト', destroy_user_session_path, class: "nav-item nav-link", method: :delete %>
             </ul>
@@ -45,7 +45,7 @@
               <a class="nav-link" href="#services">できること</a></li>
               <%= link_to("新規登録", new_user_registration_path, class: "nav-item nav-link") %>
               <%= link_to("ログイン", new_user_session_path, class: "nav-item nav-link") %>
-              <%= button_to 'ゲストログイン（閲覧用）', users_guest_sign_in_path, {method: :post, class: "nav-buttom"} %>
+              <%= button_to 'ゲストログイン（閲覧用）', users_guest_sign_in_path, {method: :post, class: "easy-login-buttom"} %>
           <% end %>
         </div>
       </div>
