--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -17,7 +17,7 @@
       <%= link_to(post.user.name, "/users/#{post.user.id}", style: "color: black;") %>
       <div class="post-card-body">
         <h6 class="card_content">
-          <%= post.content %>
+          <%= link_to(post.content, "/posts/#{post.id}", style: "color: black;") %>
           <i class="fas fa-heart unlike-btn" ></i>
           <%= post.likes.count %>
         </h6>
@@ -64,4 +64,24 @@
       <%= paginate @posts %>
     </div>
   </div>
+  <div class="search_main" style="width: 22rem;">
+    <div class="search_container">
+      <%= search_form_for @q do |f| %>
+        <%= f.text_field :content_cont, :placeholder => "キーワード" %>
+        <%= f.submit "検索", class: "search-btn" %>
+      <% end %>
+      <br>
+      <% if @post.present? %>
+        <% @post.each do |post| %>
+          <%= image_tag post.user.avatar.url, class: 'rank-image', size: '500x240' %>
+          <%= link_to(post.user.name, "/users/#{post.user.id}", style: "color: black;") %>
+        <div class="search-content">  
+          <%= link_to(post.content, "/posts/#{post.id}", style: "color: black;") %>
+        </div>
+        <% end %>
+      <% else %>
+        <p>検索結果はありません</p>
+      <% end %>
+    </div>
+  </div>  
 </div>
