ユーザー削除機能導入

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -99,6 +99,12 @@
     border-left: solid 5px #ffaf58;/*左線（実線 太さ 色）*/
   }
 
+  .user-liked-image {
+    width: 30px;
+    height: 30px;
+    border-radius: 60%;
+  }
+
   .user-image {
     width: 50px;
     height: 50px;
